# pyomicron

./: .gitignore  .pep8speaks.yml  .travis.yml  README.md  RELEASE.md  azure-pipelines.yml  environment.yml  pyproject.toml  requirements.txt  requirements.yml  setup.cfg  setup.py
.github/workflows/: build.yml
.travis/: build-lal.sh
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/configuration/: index.rst
docs/utilities/: merge.rst  print.rst
docs/workflow/: index.rst  simulations.rst
omicron/: __init__.py  _version.py  condor.py  const.py  data.py  io.py  log.py  nagios.py  parameters.py  segments.py  utils.py
omicron/cli/: archive.py  merge-with-gaps.py  merge_with_gaps.py  metric_day_merge.py  omicron-rm-empty.py  omicron_archive.py  omicron_merge_with_gaps.py  omicron_post_script.py  omicron_rm_empty.py  print.py  process.py  rm_empty.py  show.py  status.py
omicron/tests/: compat.py  mock_htcondor.py  test_condor.py  test_io.py  test_log.py  test_nagios.py  test_parameters.py  test_segments.py  test_utils.py
scripts/: flist-check.sh
