[metadata]
license_file = COPYING

[aliases]
test = pytest

[pytest]
addopts = --verbose --exitfirst -r s

[versioneer]
VCS = git
style = pep440
versionfile_source = omicron/_version.py
versionfile_build = omicron/_version.py
tag_prefix = v
parentdir_prefix =

[coverage:run]
source = omicron
omit =
	omicron/tests/*
	omicron/_version.py
