[metadata]
license_files = COPYING

[aliases]
test = pytest

[versioneer]
VCS = git
style = pep440
versionfile_source = omicron/_version.py
versionfile_build = omicron/_version.py
tag_prefix = v
parentdir_prefix =

[coverage:run]
source = omicron
omit =
	omicron/tests/*
	omicron/_version.py

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	docs/,
	omicron/_version.py,
	venv/,
	versioneer.py,
per-file-ignores =
	__init__.py:F401
format = "${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s"
